--- a/style/style.css
+++ b/style/style.css
@@ -47,6 +47,13 @@ body {
   border-radius: 5px;
   padding: 11px 35px;
   background-color: #03045e;
+  transition: 0.3s ease;
+  border: none;
+  cursor: pointer;
+}
+
+.nav button:hover {
+  background-color: #0098FF;
 }
 
 .banner {
@@ -89,13 +96,18 @@ body {
   background-color: #0098ff;
   padding: 17px 38px;
   border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.wrapper a:hover {
+  background-color: #03045E;
 }
 
 .witedomain {
   display: flex;
   justify-content: space-between;
   background-color: #ffffff;
-  height: 400px;
+  height: 436px;
   width:auto;
   
 }
@@ -114,7 +126,7 @@ body {
 .input {
   display: flex;
   flex-direction: column;
-  padding-top: 100px;
+  padding-top: 130px;
 }
 
 .input h1 {
@@ -169,10 +181,16 @@ body {
   margin-left: 0px;
   width: 159px;
   height: 60px;
+  transition: 0.3s ease;
+  cursor: pointer;
+}
+
+.inputbtn button:hover {
+  background-color: #03045E;
 }
 
 .line {
-  margin: 130px 69px 155px 69px;
+  margin: 160px 69px 163px 69px;
     border-left: 1px solid rgba(108, 108, 108, 0.129);
     background-color:rgba(118, 117, 117, 0.035) ;
 }
@@ -182,9 +200,9 @@ body {
   height: 134px;
  display: flex;
  flex-wrap: wrap;
- padding-top: 135px;
+ padding-top: 165px;
  justify-content: space-evenly;
- margin-left: 0px;
+
 }
 
 .dom {
@@ -205,4 +223,128 @@ body {
   font-size: 14px;
   opacity: 50%;
   color: #03045E;
+}
+
+.service {
+  max-width: 1282px;
+  max-height: 996px;
+  margin: 0 auto;
+  padding: 150px 0px;
+}
+
+.service h2 {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  color: #03045E;
+  text-align: center;
+  margin: 0px;
+}
+
+.ourservices {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.blockservice {
+  width: auto;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: auto;
+  padding-top: 60px;
+}
+
+.nameservices {
+  margin: 25px 0px;
+  height: 23px;
+  text-decoration: none;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  color: #03045E;
+  transition: 0.4s;
+}
+
+.nameservices:hover {
+  font-size: 23px;
+}
+
+.description {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  opacity: 50%;
+  color: #03045E;
+  width: 407px;
+  height: 75px;
+  margin: 0px;
+}
+
+.imgweb {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  background-image: url(/img/Dedicated\ Server.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: #dddddd1b;
+  margin: auto;
+}
+
+.imgvsp {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  background-image: url(/img/VPS\ \ Hosting.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: #dddddd1b;
+  margin: auto;
+}
+
+.imgserver {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  background-image: url(/img/Dedicated\ Server.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: #dddddd1b;
+  margin: auto;
+}
+
+.imgcloud{
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  background-image: url(/img/Cloud\ Hosting.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: #dddddd1b;
+  margin: auto;
+}
+
+.imgdomain {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  background-image: url(/img/Domain\ Names.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: #dddddd1b;
+  margin: auto;
+}
+
+.imgkeys {
+  width: 100px;
+  height: 100px;
+  border-radius: 10px;
+  background-image: url(/img/License\ Keys.svg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-color: #dddddd1b;
+  margin: auto;
 }
