--- a/style/style.css
+++ b/style/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 .nav button:hover {
-  background-color: #0098FF;
+  background-color: #0098ff;
 }
 
 .banner {
@@ -100,7 +100,7 @@ body {
 }
 
 .wrapper a:hover {
-  background-color: #03045E;
+  background-color: #03045e;
 }
 
 .witedomain {
@@ -108,8 +108,7 @@ body {
   justify-content: space-between;
   background-color: #ffffff;
   height: 436px;
-  width:auto;
-  
+  width: auto;
 }
 
 .searchdomain {
@@ -148,7 +147,6 @@ body {
   border: 0px;
   background-color: #f6f6f6;
   border-radius: 5px 0px 0px 5px;
-  
 }
 
 /*focus для input*/
@@ -166,9 +164,8 @@ body {
   opacity: 50%;
   font-size: 16px;
   font-weight: 600;
-  transform: 0.3s ;
+  transform: 0.3s;
 }
-
 
 .inputbtn button {
   font-family: "Poppins", sans-serif;
@@ -186,23 +183,22 @@ body {
 }
 
 .inputbtn button:hover {
-  background-color: #03045E;
+  background-color: #03045e;
 }
 
 .line {
   margin: 160px 69px 163px 69px;
-    border-left: 1px solid rgba(108, 108, 108, 0.129);
-    background-color:rgba(118, 117, 117, 0.035) ;
+  border-left: 1px solid rgba(108, 108, 108, 0.129);
+  background-color: rgba(118, 117, 117, 0.035);
 }
 
 .priсedomain {
   width: 1000px;
   height: 134px;
- display: flex;
- flex-wrap: wrap;
- padding-top: 165px;
- justify-content: space-evenly;
-
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 165px;
+  justify-content: space-evenly;
 }
 
 .dom {
@@ -214,7 +210,7 @@ body {
   font-family: "Ubuntu", sans-serif;
   font-weight: bold;
   font-size: 20px;
-  color: #0098FF;
+  color: #0098ff;
 }
 
 .pricedomain {
@@ -222,7 +218,7 @@ body {
   font-weight: 500;
   font-size: 14px;
   opacity: 50%;
-  color: #03045E;
+  color: #03045e;
 }
 
 .service {
@@ -236,7 +232,7 @@ body {
   font-family: "Ubuntu", sans-serif;
   font-weight: bold;
   font-size: 40px;
-  color: #03045E;
+  color: #03045e;
   text-align: center;
   margin: 0px;
 }
@@ -264,7 +260,7 @@ body {
   font-family: "Ubuntu", sans-serif;
   font-weight: bold;
   font-size: 20px;
-  color: #03045E;
+  color: #03045e;
   transition: 0.4s;
 }
 
@@ -277,7 +273,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   opacity: 50%;
-  color: #03045E;
+  color: #03045e;
   width: 407px;
   height: 75px;
   margin: 0px;
@@ -316,7 +312,7 @@ body {
   margin: auto;
 }
 
-.imgcloud{
+.imgcloud {
   width: 100px;
   height: 100px;
   border-radius: 10px;
@@ -347,4 +343,86 @@ body {
   background-repeat: no-repeat;
   background-color: #dddddd1b;
   margin: auto;
+}
+
+.whiterecall {
+  display: flex;
+  justify-content: space-between;
+  background-color: #ffffff;
+  height: 680px;
+  width: auto;
+}
+
+.recall {
+  max-width: 1282px;
+  margin: 0 auto;
+  padding: 150px 0px;
+}
+
+.recall h2 {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 40px;
+  color: #03045e;
+  text-align: center;
+  margin: 0px;
+}
+
+.recallflex {
+  height: auto;
+  display: flex;
+  text-align: center;
+  padding-top: 60px;
+  column-gap: 30px;
+}
+
+.recallblock {
+  width: 390px;
+  height: 243px;
+  background-color: #f6f6f6;
+}
+
+.comment {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  opacity: 50%;
+  color: #03045e;
+  width: 327px;
+  height: 81px;
+  margin: 0px auto;
+  padding-top: 50px;
+}
+
+.nameaddress {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.firstlastname {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  color: #03045e;
+  width: 120px;
+  height: 23px;
+}
+
+.address {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  opacity: 50%;
+  color: #03045e;
+  height: 21px;
+  padding-top: 8px;
+}
+
+.imgrectangle {
+  height: 48px;
+  width: 1282px;
+  background-image: url(/img/rectangle.svg);
+  background-position: bottom 8px right 52%;
+  background-repeat: no-repeat;
 }
