--- a/style/style.css
+++ b/style/style.css
@@ -569,3 +569,159 @@ body {
   background-color: #FFFFFF;
   color: #03045E;
 }
+
+.footer {
+  height: 530px;
+}
+
+.footertop {
+  height: 472px;
+}
+
+.generalfooter {
+  max-width: 1282px;
+  margin: 0 auto;
+  padding: 100px 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.aboutUs {
+  width: 297px;
+  height: 72px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #03045e;
+  opacity: 50%;
+  margin-top: 25px;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.links span {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.links a {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #03045e;
+  opacity: 50%;
+}
+
+.linkservice {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.linkservice span {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.linkservice a {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #03045e;
+  opacity: 50%;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.contact a {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  color: #03045e;
+  opacity: 50%;
+}
+
+.contact span {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.follow {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.follow span {
+  font-family: "Ubuntu", sans-serif;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.media{
+  display: flex;
+  gap: 20px;
+  width: 112px;
+  height: 24px;
+}
+
+.facebook {
+  width: 24px;
+  height: 24px;
+  background-image: url(/img/facebook.svg);
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.twitter {
+  width: 24px;
+  height: 24px;
+  background-image: url(/img/twitter.svg);
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+.youtube {
+  width: 24px;
+  height: 24px;
+  background-image: url(/img/youtube.svg);
+  background-repeat: no-repeat;
+  cursor: pointer;
+}
+
+
+.footerbotom {
+  height: 58px;
+  background-color: #FFFFFF;
+}
+
+.copywriter {
+  max-width: 1282px;
+  margin: 0 auto;
+  padding: 40px 15px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.copywriter span {
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  color: #03045e;
+}
